<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/login_with_email"
        android:textStyle="bold"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/login_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:layout_below="@+id/email_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/or"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_button" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_text"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp" />

</RelativeLayout>
